[build-system]
requires = [
    'wheel',
    'setuptools',
    'Cython',
    'setuptools_scm[toml]',
]
build-backend = 'setuptools.build_meta'

[tool.pytest.ini_options]
minversion = '6.0'
addopts = '--cov-report=xml --cov-report=term:skip-covered --cov=pyebur128'
testpaths = ['tests']

[tool.setuptools_scm]
write_to = 'src/pyebur128/version.py'
