[metadata]
name = pyebur128
version = attr: pyebur128.__version__
url = https://github.com/jodhus/pyebur128/
license = MIT
license_files = LICENSE
author = Josh Washburne
author_email = josh@jodh.us
maintainer = Josh Washburne
description = A Cython implementation of the libebur128 library for measuring audio loudness.
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Documentation = https://github.com/jodhus/pyebur128/
    Source = https://github.com/jodhus/pyebur128/
    Bug Tracker = https://github.com/jodhus/pyebur128/issues/
keywords =
    audio loudness
    loudness range
    loudness units
    true peak
    sample peak
    relative threshold
    ebu r128
    itu r bs 1770
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: Microsoft :: Windows
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Multimedia :: Sound/Audio
    Topic :: Multimedia :: Sound/Audio :: Analysis

[options]
zip_safe = True
include_package_data = True
python_requires = >= 3.8
install_requires =
packages = find:
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
tests =
    numpy
    pytest
    pytest-cov
    SoundFile
dev =
    cython
    flake8
docs =
    sphinx
    sphinx-rtd-theme

[build_ext]
inplace=1
